--- a/components/support-mustache/src/main/resources/templates/layout/footer.mustache
+++ b/components/support-mustache/src/main/resources/templates/layout/footer.mustache
@@ -11,10 +11,11 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <!--index.js 추가-->
 <script src="/js/app/index.js"></script>
+<script src="/js/app/common.js"></script>
 </body>
 </html>
